--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -59,7 +59,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background: linear-gradient(to top, $color-dark 0%, transparent 45%);
+    background: linear-gradient(to top, var(--bg-secondary) 0%, transparent 45%);
     pointer-events: none;
     z-index: 1;
   }
