--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,22 +19,6 @@
     border-radius: 4px;
 }
 
-// .gradient-divider {
-//     opacity: 0.3 !important;
-//     position: absolute;
-//     top: 0;
-//     right: 0; // Aquí se coloca al lado derecho
-//     width: 2px;
-//     height: 100%;
-//     background-image: linear-gradient(to bottom, $color-dark, transparent);
-//     background-repeat: no-repeat;
-//     box-shadow: -1px -1px 7px 9px $color-dark;
-//     background-size: cover;
-//     border: none;
-//     opacity: 1;
-//     z-index: 10;
-// }
-
 ::ng-deep .gradient-divider.mat-divider-vertical {
     background: none; // elimina fondo por defecto
 }
@@ -231,11 +215,23 @@
 }
 
 .router-outlet {
-    width: 100%;
-    height: 100%;
-    // margin: 20px 20px 20px 0;
-    padding: 140px 30px 0px 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  // margin: 20px 20px 20px 0;
+  padding: 140px 30px 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  // Estilos específicos para la ruta de login
+  &.login-route {
+    padding: 0;
+    // Asegurar que ocupe toda la pantalla en login
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+  }
 }
