--- a/src/app/feactures/maintenances/maintenances.component.html
+++ b/src/app/feactures/maintenances/maintenances.component.html
@@ -35,6 +35,16 @@
                         <td mat-cell *matCellDef="let element"> {{element.spareParts}} </td>
                     </ng-container>
 
+                    <!-- Status Column -->
+                    <ng-container matColumnDef="status">
+                        <th mat-header-cell *matHeaderCellDef> Estado </th>
+                        <td mat-cell *matCellDef="let element">
+                            <span class="status-badge" [class.completed]="element.isCompleted">
+                                {{ element.isCompleted ? 'Completado' : 'Pendiente' }}
+                            </span>
+                        </td>
+                    </ng-container>
+
                     <!-- Weight Column -->
                     <ng-container *ngIf="!istechenical" matColumnDef="technicianId">
                         <th mat-header-cell *matHeaderCellDef> Técnico </th>
@@ -53,6 +63,10 @@
                                 <button mat-menu-item (click)="actionMaintenance('edit', element)">
                                     <mat-icon>edit</mat-icon>
                                     <span>Editar</span>
+                                </button>
+                                <button mat-menu-item (click)="completeMaintenance(element)" [disabled]="element.isCompleted">
+                                    <mat-icon>{{ element.isCompleted ? 'check_circle' : 'check_box' }}</mat-icon>
+                                    <span>{{ element.isCompleted ? 'Completado' : 'Completar' }}</span>
                                 </button>
                                 <button mat-menu-item (click)="deleteMaintenance(element)">
                                     <mat-icon>delete</mat-icon>
