--- a/src/app/feactures/details/details.component.html
+++ b/src/app/feactures/details/details.component.html
@@ -1,1 +1,74 @@
-<p>maintenances works!</p>
+<div class="mat-header-strong">
+    <h1 class="size-title">Todos los Mantenimientos</h1>
+</div>
+
+<div class="content-cards">
+    <mat-card class="chart-card" appearance="outlined">
+        <mat-card-header>
+            <div class="card-header-strong">
+                <mat-form-field appearance="outline" class="custom-input">
+                    <input matInput placeholder="Buscar mantenimiento" (change)="onSearchChange($event)"
+                        aria-label="Search">
+                    <mat-icon matSuffix>search</mat-icon>
+                </mat-form-field>
+            </div>
+        </mat-card-header>
+        <mat-card-content class="">
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="date">
+                        <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                        <td mat-cell *matCellDef="let element"> {{element.date | date:'dd/MM/yyyy'}} </td>
+                    </ng-container>
+
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="type">
+                        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+                        <td mat-cell *matCellDef="let element"> {{TRADUCERTYPES[element.type]}} </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="spareParts">
+                        <th mat-header-cell *matHeaderCellDef> Repuestos </th>
+                        <td mat-cell *matCellDef="let element"> {{element.spareParts}} </td>
+                    </ng-container>
+
+                    <!-- Status Column -->
+                    <ng-container matColumnDef="status">
+                        <th mat-header-cell *matHeaderCellDef> Estado </th>
+                        <td mat-cell *matCellDef="let element">
+                            <span class="status-badge" [class.completed]="element.isCompleted">
+                                {{ element.isCompleted ? 'Completado' : 'Pendiente' }}
+                            </span>
+                        </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container *ngIf="!istechenical" matColumnDef="technicianId">
+                        <th mat-header-cell *matHeaderCellDef> Técnico </th>
+                        <td mat-cell *matCellDef="let element"> {{element.technician}}</td>
+                    </ng-container>
+
+                    
+                    <ng-container matColumnDef="acciones">
+                        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+                        <td mat-cell *matCellDef="let element">
+                            <button mat-icon-button (click)="completeMaintenance(element)">
+                                <mat-icon>visibility</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
+
+
+                    <tr mat-header-row *matHeaderRowDef="displayColunmMaintenance; sticky: true"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayColunmMaintenance;"></tr>
+                </table>
+
+            </div>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+                aria-label="Select page of periodic elements">
+            </mat-paginator>
+        </mat-card-content>
+    </mat-card>
+</div>
